# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "autokit"
version = "0.1.0"
description = "A simple tool to automate the installation and integration of external tools."
readme = "README.md"
authors = [{name = "Lukas G. Olson", email = "olson@student.ubc.ca"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta"
]
keywords = ["automation", "tools", "installation"]
dependencies = [
    "requests",
    "loguru",
    "tqdm"
]


[project.urls]
Homepage = "https://github.com/lukasgolson/Autokit"
